k8s/yaml/gitlab/config/paAdmin-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: postgres
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pgadmin.test.com
      http:
        paths:
          - path: /
            backend:
              serviceName: pgadmin
              servicePort: 80
